--- a/template/about-us.html
+++ b/template/about-us.html
@@ -32,46 +32,12 @@
 <body>
     <!-- HEADER -->
     <header>
-        <!-- NAVBAR TOP -->
-        <div class="topbar d-none d-sm-block">
-            <div class="container ">
-                <div class="row">
-                    <div class="col-sm-12 col-md-5">
-                        <div class="topbar-left">
-                            <div class="topbar-text">
-                                Monday, March 22, 2020
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-7">
-                        <div class="list-unstyled topbar-right">
-                            <ul class="topbar-link">
-                                <li><a href="#" title="">Career</a></li>
-                                <li><a href="#" title="">Contact Us</a></li>
-                                <li><a href="#" title="">Login / Register</a></li>
-                            </ul>
-                            <ul class="topbar-sosmed">
-                                <li>
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fa fa-instagram"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- END NAVBAR TOP -->
         <!-- NAVBAR -->
         <nav class="navbar navbar-hover navbar-expand-lg navbar-soft">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="images/logo-blue-stiky.png" alt="" class="img-fluid">
+                    <img src="images/logo-principal.png" alt="" class="img-fluid">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav99">
                     <span class="navbar-toggler-icon"></span>
@@ -79,89 +45,31 @@
                 <div class="collapse navbar-collapse" id="main_nav99">
                     <ul class="navbar-nav  mx-auto">
                         <li class="nav-item dropdown">
-                            <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown"> Home </a>
+                            <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown"> Nosotros </a>
                             <ul class="dropdown-menu dropdown-menu-left animate fade-up">
-                                <li><a class='dropdown-item' href='/homepage-v1'> Home version one </a>
-                                </li>
-                                <li><a class='dropdown-item' href='/homepage-v2'> Home version two </a></li>
-                                <li><a class='dropdown-item' href='/homepage-v3'> Home version three </a></li>
-                                <li><a class='dropdown-item' href='/homepage-v4'> Home version four </a></li>
-                                <li><a class='dropdown-item' href='/homepage-v5'> Home version five </a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"> Pages </a>
-                            <ul class="dropdown-menu animate fade-up">
-
-                                <li><a class="dropdown-item icon-arrow" href="#"> Property Listing </a>
-                                    <ul class="submenu dropdown-menu  animate fade-up">
-                                        <li><a class='dropdown-item' href='/listing-style-v1'> Style 1</a></li>
-                                        <li><a class='dropdown-item' href='/listing-style-v2'> Style 2</a></li>
-                                        <li><a class='dropdown-item' href='/listing-style-v3'> Style 3</a></li>
-                                        <li><a class='dropdown-item' href='/listing-style-v4'> Style 4</a></li>
-                                        <li><a class='dropdown-item' href='/listing-style-v5'> Style 5</a></li>
-                                        <li><a class="dropdown-item icon-arrow" href="">Submenu item 3 </a>
-                                            <ul class="submenu dropdown-menu  animate fade-up">
-                                                <li><a class="dropdown-item" href="">Multi level 1</a></li>
-                                                <li><a class="dropdown-item" href="">Multi level 2</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a class="dropdown-item" href="">Submenu item 4</a></li>
-                                        <li><a class="dropdown-item" href="">Submenu item 5</a></li>
-                                    </ul>
-                                </li>
-                                <li><a class="dropdown-item icon-arrow" href="#"> Property single detail </a>
-                                    <ul class="submenu dropdown-menu  animate fade-up">
-                                        <li><a class='dropdown-item' href='/single-detail-v1'>Style 1</a></li>
-                                        <li><a class='dropdown-item' href='/single-detail-v2'>Style 2</a></li>
-                                        <li><a class='dropdown-item' href='/single-detail-v3'>Style 3</a></li>
-                                        <li><a class='dropdown-item' href='/single-detail-v4'>Style 4</a></li>
-                                        <li><a class='dropdown-item' href='/single-detail-v5'>Style 5</a></li>
-                                    </ul>
-
-                                </li>
-
-                                <li><a class="dropdown-item icon-arrow" href="#"> Agent </a>
-                                    <ul class="submenu dropdown-menu  animate fade-up">
-                                        <li><a class='dropdown-item' href='/agents-v1'>Style 1</a></li>
-                                        <li><a class='dropdown-item' href='/agents-v2'>Style 2</a></li>
-                                        <li><a class='dropdown-item' href='/agents-detail'>Agent detail</a></li>
-                                    </ul>
-                                </li>
-                                <li><a class="dropdown-item icon-arrow" href="#"> Agency </a>
-                                    <ul class="submenu dropdown-menu  animate fade-up">
-                                        <li><a class='dropdown-item' href='/agency-v1'>Style 1</a></li>
-                                        <li><a class='dropdown-item' href='/agency-v2'>Style 2</a></li>
-                                        <li><a class='dropdown-item' href='/agency-detail'>Agency detail</a></li>
-                                    </ul>
-                                </li>
-                                <li><a class='dropdown-item' href='/about-us'>About us </a>
-                                <li><a class='dropdown-item' href='/login'>Login </a>
-                                <li><a class='dropdown-item' href='/register'> Register </a>
-                                <li><a class='dropdown-item' href='/contact'> Contact </a>
-                                <li><a class='dropdown-item' href='/404'> 404 Error </a>
-                            </ul>
-                        </li>
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown"> Blog </a>
+                            <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown"> Proyectos </a></li>
                             <ul class="dropdown-menu dropdown-menu-left animate fade-up">
-                                <li><a class='dropdown-item' href='/blog'> Blog </a>
-                                </li>
-                                <li><a class='dropdown-item' href='/blog-single'> Blog Single </a></li>
-
                             </ul>
                         </li>
-
-                        <li class="nav-item"><a class='nav-link' href='/contact'> contact </a></li>
-                    </ul>
-
+                        <li class="nav-item dropdown">
+                            <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown"> Inmobiliaria </a>
+                            <ul class="dropdown-menu dropdown-menu-left animate fade-up">
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown"> Declaratoria de Fab. </a></li>
+                            <ul class="dropdown-menu dropdown-menu-left animate fade-up">
+                            </ul>
+                        </li>
 
                     <!-- Search bar.// -->
                     <ul class="navbar-nav">
                         <li>
                             <a href="#" class="btn btn-primary text-capitalize">
-                                <i class="fa fa-plus-circle mr-1"></i> add listing</a>
+                                <i class="fa fa-plus-circle mr-1"></i> Vender mi propiedad</a>
                         </li>
                     </ul>
                     <!-- Search content bar.// -->
@@ -198,21 +106,21 @@
                 <div class="container">
                     <div class="row d-flex justify-content-center">
                         <div class="col-md-8 text-center">
-                            <h2 class="text-capitalize text-white">about us</h2>
+                            <h2 class="text-capitalize text-white">Proyectos destacados</h2>
                             <ul class="list-inline ">
                                 <li class="list-inline-item">
                                     <a href="#" class="text-white">
-                                        home
+                                       Proyectos de arquitectura
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="#" class="text-white">
-                                        page
+                                        Venta de propiedades
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="#" class="text-white">
-                                        about us
+                                        Declaratoria de fábrica e independizaciones
                                     </a>
                                 </li>
 
@@ -227,14 +135,14 @@
     <div class="clearfix"></div>
 
 
-    <!-- ABOUT -->
+    <!-- DEBE IR EL CARRUSEL CON LAS IMAGENES -->
     <section class="home__about bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="title__leading">
-                        <h6 class="text-uppercase text-primary mb-3">trusted By thousands</h6>
-                        <h2 class="text-capitalize">Delivering High Quality Projects property valuation </h2>
+                        <h6 class="text-uppercase text-primary mb-3">No busques más</h6>
+                        <h2 class="text-capitalize">Realización de proyectos de alta calidad valoración de la propiedad </h2>
                         <p>
                             Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                             aliqua. Ut enim ad minim veniam.
@@ -275,31 +183,28 @@
             <div class="row justify-content-center">
                 <div class="col-md-7">
                     <div class="title__head">
-                        <h2 class="text-center text-capitalize">our other successful projects</h2>
-                        <p class="text-center text-capitalize">brand partners successful projects trusted many clients
-                            building real estate since 1985 we experiance </p>
+                        <h2 class="text-center text-capitalize">Certificación institucional</h2>
+                        <p> Estamos registrados como agentes inmobiliarios ante el MVCS, somos 
+                            miembros del Colegio de Arquitectos del Perú (CAP) - Regional Lima, 
+                            y estamos habilitados por SUNARP como verificadores comunes.
+                         </p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="projects__partner-logo">
-                        <ul class="list-inline mb-0">
+                        <ul class="list-inline mb-0" style="display: flex; justify-content: center; gap: 20px;">
                             <li class="list-inline-item">
-                                <img src="images/partner-logo6.png" alt="" class="img-fluid">
+                                <img src="images/03-mvcs.png" alt="" class="img-fluid">
                             </li>
                             <li class="list-inline-item">
-                                <img src="images/partner-logo7.png" alt="" class="img-fluid">
+                                <img src="images/02-cap.png" alt="" class="img-fluid">
                             </li>
                             <li class="list-inline-item">
-                                <img src="images/partner-logo8.png" alt="" class="img-fluid">
+                                <img src="images/01-sunarp.png" alt="" class="img-fluid">
                             </li>
-                            <li class="list-inline-item">
-                                <img src="images/partner-logo1.png" alt="" class="img-fluid">
-                            </li>
-                            <li class="list-inline-item">
-                                <img src="images/partner-logo5.png" alt="" class="img-fluid">
-                            </li>
+    
                         </ul>
                     </div>
                 </div>
@@ -314,9 +219,9 @@
                 <div class="col-md-6 mx-auto">
                     <div class="title__head">
                         <h2 class="text-center text-capitalize">
-                            our Team
+                            Nuestro equipo de trabajo
                         </h2>
-                        <p class="text-center text-capitalize">see our top of the month teams</p>
+                        <p class="text-center text-capitalize">Conoce más sobre su experiencia</p>
                     </div>
                 </div>
                 <div class="clearfix"></div>
