--- a/template/agency-v1.html
+++ b/template/agency-v1.html
@@ -308,7 +308,7 @@
                                     <div class="col-md-6 col-lg-6 my-auto">
                                         <div class="profile__agency-info">
                                             <h5 class="text-capitalize">
-                                                <a href="#" target="_blank">real estate company</a>
+                                                <a href="#" target="_blank">real prueba</a>
                                             </h5>
                                             <p class="text-capitalize mb-1">Los Angeles, city, United States of America
                                             </p>
